# reg_transfo

./: .copier-answers.yml  .dockerignore  .gitignore  Dockerfile  Dockerfile.bak  README.md  pyproject.toml  pyrightconfig.json  requirements-torch.txt  run_gnn_experiments.sh
.github/: launch_actions_runner.sh
reg_transfo/: __init__.py  config.yaml  configschnet.yaml  conftest.py  experiment.py  main.py  main2.py  main_schnet.py  main_test.py  testtg.py
reg_transfo/algorithms/: basealgo.py  gnnvit.py  gnnvit_frozen.py  image_classifier_test.py  image_transformer.py  jax_image_classifier.py  jax_image_classifier_test.py  jax_ppo.py  jax_ppo_test.py  lightning_module_tests.py  llm_finetuning.py  llm_finetuning_test.py  molecule_base.py  no_op.py  schnet.py  text_classifier.py  text_classifier_test.py
reg_transfo/algorithms/callbacks/: classification_metrics.py  samples_per_second.py
reg_transfo/algorithms/networks/: __init__.py  gnnvit.py
reg_transfo/configs/: __init__.py  config.py  config.yaml
reg_transfo/configs/algorithm/: gnnvit.yaml  gnnvit_frozen.yaml  image_classifier.yaml  jax_image_classifier.yaml  jax_ppo.yaml  llm_finetuning.yaml  no_op.yaml  schnet.yaml  text_classifier.yaml
reg_transfo/configs/datamodule/: cifar10.yaml  cremp.yaml  fashion_mnist.yaml  glue_cola.yaml  imagenet.yaml  inaturalist.yaml  mnist.yaml  pdbbind.yaml  qm7.yaml  qm8.yaml  qm9.yaml  vision.yaml
reg_transfo/configs/experiment/: cluster_sweep_example.yaml  example.yaml  gnn.yaml  gnnqm7.yaml  gnnqm8.yaml  gnnqm9.yaml  gnnvit.yaml  gnnvitqm7.yaml  gnnvitqm7_frozen.yaml  gnnvitqm8.yaml  gnnvitqm8_frozen.yaml  gnnvitqm9.yaml  gnnvitqm9_frozen.yaml  jax_rl_example.yaml  local_sweep_example.yaml  notes.md  stress_test.yaml  test_quick.yaml
reg_transfo/configs/hydra/: default.yaml
reg_transfo/configs/trainer/: debug.yaml  default.yaml  jax_trainer.yaml  overfit_one_batch.yaml
reg_transfo/configs/training/: default.yaml
reg_transfo/datamodules/: __init__.py  cremp.py  datamodule_tests.py  dataset_stats.py  dchem.py  deepchemtest.py  vision.py  vision_test.py
reg_transfo/datamodules/image_classification/: cifar10.py  cifar10_test.py  fashion_mnist.py  fashion_mnist_test.py  image_classification.py  image_classification_test.py  imagenet.py  imagenet_test.py  inaturalist.py  inaturalist_test.py  mnist.py  mnist_test.py
reg_transfo/datamodules/text/: text_classification.py  text_classification_test.py
reg_transfo/trainers/: jax_trainer.py
reg_transfo/utils/: env_vars.py  hydra_utils.py  mem_utils.py  remote_launcher_plugin_test.py  testutils.py  warning_filters.py
reg_transfo/utils/typing_utils/: __init__.py
scripts/: debug_expts.sh  run_gnn_experiments.sh  submit_gcloud_jobs.sh
tests/: test_deepchem.py  test_gnn_transformer.py  test_gnnvit.py  test_molecule_data.py  test_qm9_graph.py  test_schnet.py
(+11 files in other folders)
