[project]
name = "reg_transfo"
dynamic = ["version"]
description = "transformer regularized with manifold matching"
authors = [
    { name = "Vincent Létourneau", email = "vincentmillions@gmail.com" },
]
dependencies = [
    "deepchem==2.8.0",
    "torch-cluster",
    "lightning>=2.4.0", # todo: would probably be hard to remove as a dependency.
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "hydra-auto-schema==0.0.7",
    # "remote-slurm-executor",
    "hydra-auto-schema>=0.0.7",
    # "hydra-orion-sweeper>=1.6.4 ; python_full_version < '3.11'",
    "hydra-orion-sweeper>=1.6.4",
    "hydra-zen==0.13.1rc1",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "matplotlib>=3.9.2",
    "optree>=0.15.0",
    "orion>=0.2.2",
    "persim>=0.3.8",
    "pip>=26.0.1",
    "rich>=13.7.1",
    "ripser>=0.6.14",
    "timm>=1.0.0",
    "torch<=2.5.0",
    "torchvision>=0.19.0",
    "torch-geometric==2.7.0",
    "tqdm>=4.66.5",
    "wandb>=0.17.6",
]
readme = "README.md"
requires-python = ">=3.10,<=3.12.3"

[dependency-groups]
dev = [
    "mktestdocs>=0.2.2",
    "pre-commit<4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-env>=1.1.3",
    "pytest-regressions>=2.5.0",
    "pytest-skip-slow>=0.0.5",
    "pytest-testmon>=2.1.1",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.2",
    "ruff>=0.6.0",
    "tensor-regression>=0.0.8",
]

[project.optional-dependencies]
gpu = ["jax[cuda12]>=0.4.31; sys_platform == 'linux'"]

[tool.pytest.ini_options]
testpaths = ["reg_transfo", "tests"]
norecursedirs = [".venv"]

# Required to use torch deterministic mode.
env = ["CUBLAS_WORKSPACE_CONFIG=:4096:8"]
addopts = [
    "--doctest-modules",
]
markers = [
    "incremental: incremental testing support",
    "parametrize_when_used: Parametrize a test only when the argument is used.",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 99
indent-width = 4
# Add the pyupgrade and isort options in addition to the defaults.
lint.select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.uv]
managed = true
find-links = ["https://data.pyg.org/whl/torch-2.4.0+cu121.html"]

[tool.uv.sources]
remote-slurm-executor = { git = "https://github.com/lebrice/remote-slurm-executor", branch = "master" }
orion = { git = "https://github.com/Epistimio/orion", tag = "v0.2.8" }


[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["reg_transfo"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
